# spring_model

./: .gitignore  README.md  RealExample.md  flake.nix  justfile  notebook.py  presentation_excerpts.py  pyproject.toml  revision.py  table.html  test.py
data/: cart_motion_sensor_inverted.csv  cart_run_2.csv  motion_sensor_run2_inverted.csv  motion_sensor_run3_asymmetrical_inverted.csv
