[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"

# for more details see 
# https://microsoft.github.io/pyright/#/configuration
packages = [
  { include = "sample_package" }
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
prettytable = "^3.12.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
